--- a/MDK-ARM/Year1_term3_project_joystick/Year1_term3_project_joystick.build_log.htm
+++ b/MDK-ARM/Year1_term3_project_joystick/Year1_term3_project_joystick.build_log.htm
@@ -22,16 +22,19 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\code\Singlechip\stm32\Year1_term3_project_joystick\MDK-ARM\Year1_term3_project_joystick.uvprojx
-Project File Date:  05/27/2024
+Project File Date:  05/28/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Year1_term3_project_joystick'
 compiling main.c...
+../Core/Src/main.c(274): warning:  #223-D: function "snprintf" declared implicitly
+  	snprintf(message, sizeof(message), "ADC_1 is: %d, ADC_2 is: %d, ADC_3 is: %d\n", ADC1_Value, ADC2_Value, ADC3_Value);
+../Core/Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=11042 RO-data=486 RW-data=32 ZI-data=1952  
+Program Size: Code=12254 RO-data=494 RW-data=20 ZI-data=2084  
 FromELF: creating hex file...
-"Year1_term3_project_joystick\Year1_term3_project_joystick.axf" - 0 Error(s), 0 Warning(s).
+"Year1_term3_project_joystick\Year1_term3_project_joystick.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -55,7 +58,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
